# readless

./: .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile.api  Dockerfile.api.local  Dockerfile.applink  Dockerfile.applink.local  Dockerfile.cron  Dockerfile.cron.local  Dockerfile.mobile  Dockerfile.mobile.local  Dockerfile.scheduler  Dockerfile.scheduler.local  Dockerfile.web  Dockerfile.web.local  Dockerfile.worker  Dockerfile.worker.local  LICENSE  README.md  compose.sh  docker-compose.yaml  package.json  pnpm-lock.yaml  setup.sh
.github/workflows/: api-ci.yaml  applink-ci.yaml  auto-ci.yaml  ci.yml  client-ci.yaml  cron-ci.yaml  mobile-ci.yaml  scheduler-ci.yaml  server-ci.yaml  web-ci.yaml  work.ci.yaml  worker-ci.yaml  worker.ci.yaml
.husky/: pre-commit
k8s/: api-deploy.yaml  applink-deploy.yaml  client-deploy.yaml  cron-deploy.yaml  deploy.yaml  ingress.yaml  scheduler-deploy.yaml  server-deploy.yaml  web-deploy.yaml  work-deploy.yaml  worker-deploy.yaml
k8s/misc/: llama.yaml  postgres.yaml
src/client/: .eslintrc  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.local  README.md  config-overrides.js  docker-compose.yaml  nginx.conf  nodemon.json  package.json  pnpm-lock.yaml  swagger.json  tsconfig.json
src/core/: localize.ts  package.json  tsconfig.json
src/mobile/: .env-example  .eslintignore  .eslintrc.js  .gitignore  Gemfile  README.md  app.json  (+10 more)
src/python/: README.md  pyproject.toml  requirements.txt
src/python/src/: main.py
src/python/src/common/: SingletonClass.py
src/python/src/services/: SentimentService.py
(+1949 files in other folders)
