[tool.poetry]
name = "readless-python"
version = "0.1.0"
description = ""
authors = ["noodleofdeath <thom@noodleofdeath.com>"]
readme = "README.md"
packages = [{include = "readless_python"}]

[tool.poetry.dependencies]
python = "^3.11"
Pattern = "^3.6.0"
textblob = "^0.17.1"
vaderSentiment = "^3.3.2"
spacy = "^3.6.0"
polyglot = "^16.7.4"
flair = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
